@startuml
'https://plantuml.com/class-diagram

abstract class Animal{

{abstract} + greeting():void
}

class Cat{

+ greeting():void
}

class Dog{

+ greeting():void
+ greeting(Dog another):void
}

class BigDog{

+ greeting():void
+ greeting(Dog another):void
}

Animal <|-- Cat
Animal <|-- Dog
Dog <|-- BigDog



@enduml